[tool.poetry]
name = "jupyterlab-multi-command"
version = "0.1.0"
description = ""
authors = ["Hirotomo Moriwaki <philopon.dependence@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
